syntax = "proto3";

option csharp_namespace = "Cope.SpaceRogue.Galaxy.API.Proto";

service MarketPlacesService {
  rpc GetProducts (Empty)  returns (GetProductsReply);
  rpc GetProduct (GetProductRequest) returns (GetProductReply);
  rpc AddProduct (AddProductRequest) returns (OkReply);
  rpc UpdateProduct (UpdateProductRequest) returns (OkReply);
  rpc DeleteProduct (GetProductRequest) returns (OkReply);
  rpc AddProductGroup (AddProductGroupRequest) returns (OkReply);
  rpc GetProductGroups (Empty) returns (GetProductGroupsReply);
  rpc GetProductGroup (GetProductGroupRequest) returns (GetProductGroupReply);
  rpc DeleteProductGroup (GetProductGroupRequest) returns (OkReply);
  rpc GetCatalogItem (GetCatalogItemRequest) returns (GetCatalogItemReply);
  rpc GetCatalogItems (GetCatalogItemsRequest) returns (GetCatalogItemsReply);
  rpc AddCatalogItem (AddCatalogItemRequest) returns (OkReply);
  rpc AddCatalog (AddCatalogRequest) returns (OkReply);
  rpc AddMarketPlace (AddMarketPlaceRequest) returns (AddMarketPlaceReply);
  rpc UpdateMarketPlace (UpdateMarketPlaceRequest) returns (UpdateMarketPlaceReply);
  rpc DeleteMarketPlace (DeleteMarketPlaceRequest) returns (DeleteMarketPlaceReply);
}

message Empty { }

message OkReply {
	bool Ok = 1;
}

message UpdateProductRequest {
	string Id = 1;
	string Name = 2;
	double SizeInUnits = 3;
	double Rarity = 4;
	double PricePerUnit = 5;
}

message GetProductRequest {
	string Id = 1;
}

message GetProductsReply {
	repeated GetProductReply Products = 1;
}

message GetProductReply {
	string Id = 1;
	string Name = 2;
	double SizeInUnits = 3;
	double Rarity = 4;
	double PricePerUnit = 5;
}

message GetProductGroupRequest {
	string Id = 1;
}

message GetProductGroupReply {
	string Id = 1;
	string Name = 2;
	repeated GetProductReply Products = 3;
}

message GetProductGroupsReply {
	repeated GetProductGroupReply ProductGroups = 1;
}

message AddCatalogRequest {
	string CatalogId = 1;
	repeated AddCatalogItemRequest CatalogItems = 2;
}

message GetCatalogItemsRequest {
	string CatalogId = 1;
}

message GetCatalogItemRequest {
	string CatalogId = 1;
}

message GetCatalogItemsReply {
	repeated GetCatalogItemReply CatalogItems = 1;
}

message GetCatalogItemReply {
	string Id = 1;
	string CatalogId = 2;
	string ProductIs = 3;
	double Price = 4;
	string Title = 5;
}


message AddCatalogItemRequest {
	string Id = 1;
	string Title = 2;
	int32 PricePercentDelta = 3;
	string ProductId = 4;
	string CatalogId = 5;
}

message AddProductGroupRequest {
	string Id = 1;
	string Name = 2;
}

message AddProductRequest {
	string Id = 1;
	string GroupId = 2;
	string Name = 3;
	double PricePerUnit = 4;
	double Rarity = 5;
	double Capacity = 6;
}

message AddMarketPlaceRequest {
	string Id = 1;
    string MarketPlaceId = 2;
	string Name = 3;
	AddCatalogRequest Offerings = 4;
	AddCatalogRequest Demands = 5;
}

message AddMarketPlaceReply {
	string Id = 1;
	string Message = 2;
}

message UpdateMarketPlaceRequest {
	string Id = 1;
	string ProductOfferingsCatalogId = 2;
	string ProductDemandsCatalogId = 3;
}

message UpdateMarketPlaceReply {
	bool Updated = 1;
	string Message = 2;
}

message DeleteMarketPlaceRequest {
	string Id = 1;
	string ProductOfferingsCatalogId = 2;
	string ProductDemandsCatalogId = 3;
}

message DeleteMarketPlaceReply {
	bool Deleted = 1;
	string Message = 2;
}