syntax = "proto3";

option csharp_namespace = "Cope.SpaceRogue.Shopping.API.Proto";

service ShopService {
  rpc GetMarketPlaces (ShoppingEmpty) returns (GetMarketPlacesReply);
  rpc GetMarketPlace (GetMarketPlaceRequest) returns (GetMarketPlaceReply);
  rpc GetCatalogItems (GetCatalogItemsRequest) returns (GetCatalogItemsReply);
  rpc GetCatalogItem (GetCatalogItemRequest) returns (GetCatalogItemReply);
  rpc Buy (BuyRequest) returns (BuyReply);
  rpc Sell(SellRequest) returns (SellReply);
}

message ShoppingEmpty 
{ 
	
}

message GetMarketPlaceRequest {
	string Id = 1;
}

message GetMarketPlacesReply {
	repeated GetMarketPlaceReply MarketPlaces= 1;
}

message GetMarketPlaceReply {
	string Id = 1;
	string ProductOfferingsCatalogId = 2;
	string ProductDemandsCatalogId = 3;
}


message GetCatalogRequest {
	string Id = 1;
}

message GetCatalogItemsRequest {
	string CatalogId = 1;
}


message GetCatalogItemsReply {
	repeated GetCatalogItemReply CatalogItems = 1;
}

message GetCatalogItemRequest {
	string Id = 1;
}

message GetCatalogItemReply {
	string Id = 1;
	string CatalogId = 2;
	string ProductIs = 3;
	double Price = 4;
	string Title = 5;
}

message BuyRequest {
	string TransactionId = 1;
	string CatalogItemId = 2;
	int32 Units = 3;
	string ShipId = 4;
}

message BuyReply {
	string TransactionId = 1;
	bool Committed = 2;
	string Message = 3;
}

message SellRequest {
	string TransactionId = 1;
	string CatalogItemId = 2;
	int32 Units = 3;
	string ShipId = 4;
}

message SellReply {
	string TransactionId = 1;
	bool Committed = 2;
	string Message = 3;
}